--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,8 @@
 plugins {
-    id 'java'
     id 'java-library'
-    id 'maven'
     id 'signing'
+    id 'java'
+    id 'maven'
 }
 
 group 'com.github.gpluscb'
@@ -36,9 +36,7 @@ dependencies {
 uploadArchives {
     repositories {
         mavenDeployer {
-            beforeDeployment {
-                MavenDeployment deployment - > signing.signPom(deployment)
-            }
+            beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
             repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2/") {
                 authentication(userName: sonatypeUsername, password: sonatypePassword)
