--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,10 @@ signing {
     sign configurations.archives
 }
 
+compileJava {
+    options.compilerArgs += ["-parameters"]
+}
+
 javadoc {
     destinationDir = file('docs/')
     if(JavaVersion.current().isJava9Compatible()) {
